tests/golden/err-window-content/expected_error.txt
error: 窓口 `_.clum` に書けるのは `^@` ブロックだけです
 --> ./_.clum:1:1
  |
1 | y = 2
  | ^^^^^ 窓口はディレクトリの公開面専用です。束縛・宣言・式はエントリファイルか通常のモジュールに書きます
